--- a/module/Admin/view/template/page/index.phtml
+++ b/module/Admin/view/template/page/index.phtml
@@ -22,6 +22,7 @@ $this->headTitle($title);
         <tr style="background-color:#2a6496;color: #ffffff">
             <th>Id</th>
             <th>Title</th>
+            <th>URL Path</th>
             <th>Contents</th>
             <th width="200">Created At</th>
             <th width="200">Updated At</th>
@@ -31,6 +32,7 @@ $this->headTitle($title);
             <tr style="background-color: <?php echo $this->cycle(array('#FFF', '#F0F0F0'))->next(); ?>">
                 <td><?php echo $this->escapeHtml($val->id);?></td>
                 <td><?php echo $this->escapeHtml($val->title);?></td>
+                <td><?php echo $this->escapeHtml($val->identifier);?></td>
                 <td><?php echo $this->escapeHtml($val->contents);?></td>
                 <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
                 <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->updatedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
