--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <?php echo $this->headTitle('Admin - Zend Framework 2 Admin Interface')->setSeparator(' - ')->setAutoEscape(false) ?>
+    <?php echo $this->headTitle('HR Consultancy - Admin')->setSeparator(' - ')->setAutoEscape(false) ?>
 
     <?php echo $this->headMeta()
         ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -20,9 +20,30 @@
     <?php echo $this->headScript()
         ->prependFile($this->basePath('backend') . '/js/bootstrap.min.js')
         ->prependFile($this->basePath('backend') . '/js/jquery.min.js')
+        ->prependFile($this->basePath('backend') . '/js/tinymce.min.js')
         ->prependFile($this->basePath('backend') . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
         ->prependFile($this->basePath('backend') . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
     ; ?>
+    
+<script type="text/javascript">
+    tinymce.init({
+        selector: "textarea",
+        theme: "modern",
+        plugins: [
+            "advlist autolink lists link image charmap print preview hr anchor pagebreak",
+            "searchreplace wordcount visualblocks visualchars code fullscreen",
+            "insertdatetime media nonbreaking save table contextmenu directionality",
+            "emoticons template paste textcolor colorpicker textpattern"
+        ],
+        toolbar1: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
+        toolbar2: "print preview media | forecolor backcolor emoticons",
+        image_advtab: true,
+        templates: [
+            {title: 'Test template 1', content: 'Test 1'},
+            {title: 'Test template 2', content: 'Test 2'}
+        ]
+    });
+</script>
 
 </head>
 
@@ -36,7 +57,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="<?php echo $this->url('admin') ?>"><img src="<?php echo $this->basePath('backend/img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Adminpanel') ?></a>
+            <a class="navbar-brand" href="<?php echo $this->url('admin') ?>"><img src="<?php echo $this->basePath('backend/img/logo.png') ?>" alt="HR Consultancy - Admin"/>&nbsp;<?php echo $this->translate('') ?></a>
         </div>
         <div class="collapse navbar-collapse">
             <?php echo $this->navigation('admin-nav')
