--- a/module/Admin/view/layout/empty.phtml
+++ b/module/Admin/view/layout/empty.phtml
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <?php echo $this->headTitle('ZF2 '. $this->translate('Skeleton Application'))->setSeparator(' - ')->setAutoEscape(false) ?>
+        <?php echo $this->headTitle('HR '. $this->translate('Consultancy'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
         <?php echo $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -33,7 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('admin') ?>"><img src="<?php echo $this->basePath('backend/img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Adminpanel') ?></a>
+                    <a class="navbar-brand" href="<?php echo $this->url('admin') ?>"><img src="<?php echo $this->basePath('backend/img/logo.png') ?>" alt="HR Consultancy"/>&nbsp;<?php echo $this->translate('') ?></a>
                 </div>
             </div>
         </nav>
