Changes added for encrypting password,creating url pattern
Signed-off-by: Roshan <roshanbhgt@gmail.com>

--- a/module/Admin/view/template/index/login.phtml
+++ b/module/Admin/view/template/index/login.phtml
@@ -48,9 +48,6 @@
                         <div class="col-sm-12 controls">
                             <button id="btn-login" type="submit" class="btn btn-info"><i class="icon-hand-right"></i>Login
                             </button>
-                            <span style="margin:0 8px;">or</span>
-                            <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
-
                         </div>
                     </div>
                     <div class="form-group">
@@ -116,11 +113,7 @@
                         <!-- Button -->
                         <div class="col-md-offset-3 col-md-9">
                             <button id="btn-signup" type="submit" class="btn btn-info"><i class="icon-hand-right"></i>
-                                &nbsp Sign Up
-                            </button>
-                            <span style="margin:0 8px;">or</span>
-                            <button id="btn-fbsignup" type="button" class="btn btn-primary"><i
-                                    class="icon-facebook"></i>   Sign Up with Facebook
+                                Sign Up
                             </button>
                         </div>
                     </div>
