--- a/module/Application/view/template/index/index.phtml
+++ b/module/Application/view/template/index/index.phtml
@@ -50,7 +50,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="http://placehold.it/1200x400/16a085/ffffff&text=About Us">
+            <img src="<?php echo $this->basePath('front/img/About Us.png') ?>">
             <div class="carousel-caption">
                 <h3>
                     Headline</h3>
@@ -62,7 +62,7 @@
         </div>
         <!-- End Item -->
         <div class="item">
-            <img src="http://placehold.it/1200x400/e67e22/ffffff&text=Projects">
+            <img src="<?php echo $this->basePath('front/img/Projects.png') ?>">
             <div class="carousel-caption">
                 <h3>
                     Headline</h3>
@@ -74,7 +74,7 @@
         </div>
         <!-- End Item -->
         <div class="item">
-            <img src="http://placehold.it/1200x400/2980b9/ffffff&text=Portfolio">
+            <img src="<?php echo $this->basePath('front/img/Portfolio.png') ?>">
             <div class="carousel-caption">
                 <h3>
                     Headline</h3>
@@ -86,7 +86,7 @@
         </div>
         <!-- End Item -->
         <div class="item">
-            <img src="http://placehold.it/1200x400/8e44ad/ffffff&text=Services">
+            <img src="<?php echo $this->basePath('front/img/Services.png') ?>">
             <div class="carousel-caption">
                 <h3>
                     Headline</h3>
@@ -116,7 +116,7 @@
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title"><?php echo $this->translate('Follow Development') ?></h3>
+                <h3 class="panel-title"><?php echo $this->translate('Recruitment Solutions') ?></h3>
             </div>
             <div class="panel-body">
                 <p><?php echo $this->translate('Site is under active development. If you are interested in following the development, there is a special portal on the official website which provides links, and much more. This is a great resource for staying up to date with the latest developments!') ?></p>
@@ -127,7 +127,7 @@
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title"><?php echo $this->translate('Discover Modules') ?></h3>
+                <h3 class="panel-title"><?php echo $this->translate('Staffing Solutions') ?></h3>
             </div>
             <div class="panel-body">
                 <p><?php echo $this->translate('The community is working on developing a community site to serve as a repository and gallery for modules. The site is currently live and currently contains a list of some of the modules already available.') ?></p>
@@ -139,7 +139,7 @@
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title"><?php echo $this->translate('Help &amp; Support') ?></h3>
+                <h3 class="panel-title"><?php echo $this->translate('Outsourcing Solution') ?></h3>
             </div>
             <div class="panel-body">
                 <p><?php echo sprintf($this->translate('If you need any help or support while developing with, you may reach us via mail roshanbhgt@gmail.com. We\'d love to hear any questions or feedback you may have regarding the beta releases. Alternatively, you may subscribe and post questions to the mail id roshanbhgt@gmail.com.')) ?></p>
