--- a/module/User/view/template/index/login.phtml
+++ b/module/User/view/template/index/login.phtml
@@ -19,7 +19,7 @@
             <div style="padding-top:30px" class="panel-body">
                 <p>By creating an account with us, you will be able to comment's on blogs, save the blogs for future reference etc...</p>
                 <div class="col-sm-12 controls">
-                    <a id="btn-account" href="<?php echo $this->serverUrl($this->url('registeremployee')); ?>" class="btn btn-info">Employer Account</a>
+                    <a id="btn-account" href="<?php echo $this->serverUrl($this->url('registercompany')); ?>" class="btn btn-info">Employer Account</a>
 					<span style="margin:0 8px;">or</span>
                     <a id="btn-account" href="<?php echo $this->serverUrl($this->url('registerjobseeker')); ?>" class="btn btn-info">Jobseeker Account</a>
                 </div>
