--- a/module/User/view/template/index/companyregister.phtml
+++ b/module/User/view/template/index/companyregister.phtml
@@ -12,7 +12,7 @@
         <div id="signupbox" class="mainbox col-lg-10">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <div class="panel-title">Create an Account</div>
+                    <div class="panel-title">Register as an Company</div>
                 </div>
                 <div class="panel-body">
                     <form id="signupform" class="form-horizontal" role="form"
@@ -22,7 +22,7 @@
                             <p>Error:</p>
                             <span></span>
                         </div>
-
+                        <input type="hidden" name="type" value="employer" />
                         <div class="form-group">
                             <label for="firstname" class="col-md-3 control-label">First Name</label>
 
@@ -51,15 +51,53 @@
                                 <input type="password" class="form-control" name="password" placeholder="Password">
                             </div>
                         </div>
-
                         <div class="form-group">
-                            <label for="state" class="col-md-3 control-label">State</label>
+                            <label for="conf-password" class="col-md-3 control-label">Confirm Password</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="state" placeholder="State">
+                                <input type="password" class="form-control" name="conf-password" placeholder="Password">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="conf-password" class="col-md-3 control-label">Company Name</label>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="companyname" placeholder="text">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="companytype" class="col-md-3 control-label">Company Type</label>
 
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="companytype" placeholder="Company Type">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="industrytpe" class="col-md-3 control-label">Industry Type</label>
+
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="email" placeholder="Email Address">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="address1" class="col-md-3 control-label">Address Line 1</label>
+
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="address1" placeholder="Address Line 1">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="address2" class="col-md-3 control-label">Address Line 2</label>
+
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="address2" placeholder="Address Line 2">
+                            </div>
+                        </div><div class="form-group">
+                            <label for="address3" class="col-md-3 control-label">Address Line 3</label>
+
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="address3" placeholder="Address Line 3">
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label for="country" class="col-md-3 control-label">Country</label>
 
@@ -67,7 +105,41 @@
                                 <input type="text" class="form-control" name="country" placeholder="Country">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="state" class="col-md-3 control-label">State</label>
 
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="state" placeholder="State">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="city" class="col-md-3 control-label">City</label>
+
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="city" placeholder="City">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="postcode" class="col-md-3 control-label">Postcode</label>
+
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="postcode" placeholder="Postcode">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="telephone" class="col-md-3 control-label">Contact Number</label>
+
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="telephone" placeholder="Telephone">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="fax" class="col-md-3 control-label">Fax</label>
+
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="fax" placeholder="Fax">
+                            </div>
+                        </div>
                         <?php // echo $captcha->getService()->getHtml();?>
 
                         <div class="form-group">
@@ -75,10 +147,6 @@
                             <div class="col-md-offset-3 col-md-9">
                                 <button id="btn-signup" type="submit" class="btn btn-info"><i class="icon-hand-right"></i>
                                     Sign Up
-                                </button>
-                                <span style="margin:0 8px;">or</span>
-                                <button id="btn-fbsignup" type="button" class="btn btn-primary"><i
-                                        class="icon-facebook"></i>Sign Up with Facebook
                                 </button>
                             </div>
                         </div>
