Added the configuration setting for managing country and regions
Signed-off-by: Roshan <roshan.bhagat@perficient.com>

--- a/module/Admin/view/partial/menu.phtml
+++ b/module/Admin/view/partial/menu.phtml
@@ -25,10 +25,12 @@ foreach ($this->container as $page)
 
 
             $html .= $page->getLabel();
-
+$html .= "</span>";
+if($submenucount){ 
+$html .= '<span class="caret"></span>';
+}
             if ($href) $html .= "</a>";
-             $html .= "</span>";
-    // $html .= $this->navigation('admin-nav')->htmlify($page) . PHP_EOL;
+             
     if(count($page->pages)){
         $html .= '<ul class="dropdown-menu">';
         foreach ($page->pages as $subpage) 
