Updated the message templates
Signed-off-by: Roshan <roshanbhgt@gmail.com>

--- a/module/Admin/view/template/region/add.phtml
+++ b/module/Admin/view/template/region/add.phtml
@@ -20,7 +20,7 @@ $this->headTitle($title);
 		<div class="form-group">
             <label for="name" class="col-md-2 control-label">Name</label>
             <div class="col-md-5">
-                <input type="text" class="form-control" value="<?php echo $region->default_name; ?>" name="dafault_name" placeholder="Name">
+                <input type="text" class="form-control" value="<?php echo $region->default_name; ?>" name="default_name" placeholder="Name">
             </div>
         </div>
         <div class="form-group">
