Recent changes in admin and menu section
Signed-off-by: Roshan <roshanbhgt@gmail.com>

--- a/module/Admin/view/template/region/add.phtml
+++ b/module/Admin/view/template/region/add.phtml
@@ -3,7 +3,7 @@ $title = 'New Region';
 $this->headTitle($title);
 ?>
 <div class="row">
-    <h3>Creating new page</h3>
+    <h3>Add new region</h3>
     <form class="form-horizontal" role="form" id="tab" method="post" action="<?php echo $this->serverUrl($this->url('admin-region', array('action'=>'save'))); ?>">
         <div class="form-group">
             <label for="country" class="col-md-2 control-label">Country</label>
