--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -61,19 +61,50 @@
         </div>
         <div class="collapse navbar-collapse">
             <?php
-                 
-            echo $this->navigation('admin-nav')->menu()
+                echo $this->navigation('admin-nav')->menu()
                     ->setUlClass('nav navbar-nav')
                     ->setPartial('partial/menu.phtml')
                     ->render();
-                /*echo $this->navigation('admin-nav')
-                    ->menu()
-                    ->setUlClass('nav navbar-nav')
-                    ->setMinDepth(0)
-                    ->setMaxDepth(0)
-                    ->setRenderInvisible(true); */
-                 
              ?>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account
+                    <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <div class="navbar-content">
+                                <div class="row">
+                                    <div class="col-md-5">
+                                        <img src="http://placehold.it/120x120"
+                                            alt="Alternate Text" class="img-responsive" />
+                                        <p class="text-center small">
+                                            <a href="<?php echo $this->serverUrl($this->url('admin', array('action'=>'index'))); ?>">Change Photo</a></p>
+                                    </div>
+                                    <div class="col-md-7">
+                                        <span>Bhaumik Patel</span>
+                                        <p class="text-muted small">
+                                            mail@gmail.com</p>
+                                        <div class="divider">
+                                        </div>
+                                        <a href="<?php echo $this->serverUrl($this->url('admin', array('action'=>'index'))); ?>" class="btn btn-primary btn-sm active">View Profile</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="navbar-footer">
+                                <div class="navbar-footer-content">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <a href="<?php echo $this->serverUrl($this->url('admin', array('action'=>'index'))); ?>" class="btn btn-default btn-sm">Change Passowrd</a>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <a href="<?php echo $this->serverUrl($this->url('admin', array('action'=>'logout'))); ?>" class="btn btn-default btn-sm pull-right">Sign Out</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
@@ -88,8 +119,8 @@
             ->setMessageSeparatorString('</li><li>')
             ->setMessageCloseString('</li></ul></div>');
 
-        echo $flash->render('error',   array('alert', 'alert-dismissible', 'alert-danger'));
-        echo $flash->render('info',    array('alert', 'alert-dismissible', 'alert-info'));
+        echo $flash->render('error', array('alert', 'alert-dismissible', 'alert-danger'));
+        echo $flash->render('info', array('alert', 'alert-dismissible', 'alert-info'));
         echo $flash->render('default', array('alert', 'alert-dismissible', 'alert-warning'));
         echo $flash->render('success', array('alert', 'alert-dismissible', 'alert-success'));
     ?>
