--- a/module/Admin/view/partial/menu.phtml
+++ b/module/Admin/view/partial/menu.phtml
@@ -1,129 +1,71 @@
 <?php
-$html = '<ul class="' .$this->navigation('admin-nav')->menu()->getUlClass(). '">';
-
-foreach ($this->container as $page) 
-{
-
-    $check = $page->isActive();
-    if($check)
-    {
-        $marker = "active";
-    }
-    else
-    {
-        $marker = "inactive";
-    }
-    $submenucount = count($page->pages);
-    $class = '';
-    if($submenucount){
-        $marker .= ' '.'dropdown';
-        $class = ' class="dropdown-toggle" data-toggle="dropdown" ';
-    }
-    $html .= '<li class="' . $marker . '">';
-    if ($href = $page->getHref()) $html .= "<a  $class  href=\"{$href}\">";
-                 $html .= "<span>";
-
-
-            $html .= $page->getLabel();
-$html .= "</span>";
-if($submenucount){ 
-$html .= '<span class="caret"></span>';
-}
-            if ($href) $html .= "</a>";
-             
-    if(count($page->pages)){
-        $html .= '<ul class="dropdown-menu">';
-        foreach ($page->pages as $subpage) 
-        {
-            $check = $subpage->isActive();
-            if($check)
-            {
-                $submarker = "active";              
-
-            }
-            else
-            {
-                $submarker = "inactive";
-
-            }
-            $html .= '<li class="' . $submarker . '">';
-            if ($href = $subpage->getHref()) $html .= "<a href=\"{$href}\">";
-                 $html .= "<span>";
-
-
-            $html .= $subpage->getLabel();
-
-            if ($href) $html .= "</a>";
-             $html .= "</span>";
-
-            $html .= "</li>";
-
-
-            // $subitem[$subpage->getHref()] = '';
-
-        }
-        $html .= "</ul>";
-    }
-    $html .= "</li>";
- }
-
-$html .= "</ul>";
-echo $html;
-   
-
-// get the page asked for
-// $uri = Zend_Controller_Action::getInstance()->getRequest()->getRequestUri();
-// $con = Zend_Controller_Action::getInstance()->getRequest()->getControllerName();
-// $act = Zend_Controller_Action::getInstance()->getRequest()->getActionName();
-
-// check for child pages
-// $list = $this->container;
-// $menuItems = $list->toArray();
-// $function = new AppFiles_Functions_FunctionsHooks();
-// $current = $list->findOneBy('action', $act);
-// $isChildof = $function->find_parent($menuItems, $act);
-
-// print($isChildof);
-
-  /* $subhtml = '<ul class="navigation">';
-            foreach ($current->pages as $subpage) 
-            {
-
-                $check = $subpage->isActive();
-                if($check)
-                {
-                    $submarker = "active";              
-
+/* @var $container Zend\Navigation\Navigation */
+$container = $this->container;
+?>
+<ul class="<?php echo $this->navigation($container)->menu()->getUlClass(); ?>">
+    <?php foreach ($container as $page): ?>
+        <?php if (!$this->navigation()->accept($page)) continue; ?>
+        <?php /* @var $page Zend\Navigation\Page\Mvc */ ?>
+        <?php $hasChildren = $page->hasPages() ?>
+        <?php if (!$hasChildren): ?>
+            <li<?php if ($page->isActive()) echo ' class="active"' ?>>
+                <a 
+                    class="nav-header" 
+                    href="<?php echo $page->getHref() ?>"
+                    <?php if ($page->getTarget() != ""): ?>
+                        target="<?php echo $page->getTarget(); ?>"
+                    <?php endif; ?>
+                    >
+                        <?php if ($page->get("icon") !== ""): ?>
+                        <span class="<?php echo $page->get("icon"); ?>"></span>
+                    <?php endif; ?>
+                    <?php echo $this->escapeHtml($this->translate($page->getLabel(), $this->navigation($container)->getTranslatorTextDomain())); ?>
+                </a>
+            </li>
+        <?php else: ?>
+            <?php
+            //check if access is allowed at least one item
+            $access = false;
+            foreach ($page->getPages() as $child) {
+                if ($this->navigation()->accept($child) && $child->get("separator") !== true) {
+                    $access = true;
                 }
-                else
-                {
-                    $submarker = "inactive";
-
-                }
-                $subhtml .= '<li class="' . $submarker . '">';
-                if ($href = $subpage->getHref()) $subhtml .= "<a href=\"{$href}\">";
-                else $subhtml .= "<span>";
-
-
-                $subhtml .= $subpage->getLabel();
-
-                if ($href) $subhtml .= "</a>";
-                else $subhtml .= "</span>";
-
-                $subhtml .= "</li>";
-
-
-                $subitem[$subpage->getHref()] = '';
-
             }
-    $subhtml .= "</ul>";
-
-// print a container for the child pages            
-
- ?>
-
-<div id="sub-menu" class="">
-<?php echo $subhtml; ?>
-</div>
-   */ ?>
-   */
+            if ($access) :
+                ?>
+                <li class="dropdown<?php if ($page->isActive(true)) echo ' active' ?>">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <?php if ($page->get("icon") !== ""): ?>
+                            <span class="<?php echo $page->get("icon"); ?>"></span>
+                        <?php endif; ?>
+                        <?php echo $this->escapeHtml($this->translate($page->getLabel(),$this->navigation($container)->getTranslatorTextDomain())); ?>
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <?php foreach ($page->getPages() as $child): ?>
+                            <?php if (!$this->navigation()->accept($child)) continue; ?>
+                            <?php if ($child->get("separator") === true): ?>
+                                <li class="divider"></li>
+                                    <?php
+                                    continue;
+                                endif;
+                                ?>
+                            <li<?php if ($child->isActive()) echo ' class="active"' ?>>
+                                <a 
+                                    href="<?php echo $child->getHref() ?>"
+                                    <?php if ($child->getTarget() != ""): ?>
+                                        target="<?php echo $child->getTarget(); ?>"
+                                    <?php endif; ?> >
+                                        <?php if ($child->get("icon") !== ""): ?>
+                                        <span class="<?php echo $child->get("icon"); ?>"></span>
+                                    <?php endif; ?>
+                                    <?php echo $this->escapeHtml($this->translate($child->getLabel(),$this->navigation($container)->getTranslatorTextDomain())); ?>
+                                </a>
+                            </li>
+                        <?php endforeach ?>
+                    </ul>
+                </li>   
+            <?php endif; ?>
+        <?php endif ?>
+    <?php endforeach ?>
+</ul>
