--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -35,3 +35,7 @@ div.container a.brand {
     margin-left: 0;
     padding: 8px 20px 12px 40px;
 }
+
+.navbar-nav.navbar-right:last-child {
+    padding: 0 !important;
+}
