Employer dashboard page changes
Signed-off-by: Roshan <roshanbhgt@gmail.com>

--- a/module/User/view/template/employer/changepassword.phtml
+++ b/module/User/view/template/employer/changepassword.phtml
@@ -1,4 +1,15 @@
 <div class="row">
+    <?php if ($this->messages) { ?>
+        <div  id="login-alert" class="alert alert-danger col-sm-12">
+            <?php
+            echo '<ul>';
+            foreach ($this->messages as $message) {
+                echo '<li>' . $message . '</li>';
+            }
+            echo '</ul>';
+            ?>
+        </div>
+    <?php } ?>
     <div class="col-md-12">
         <div class="col-md-9">
             <div class="span4">
